Wrote some more

--- a/references.bib
+++ b/references.bib
@@ -3740,3 +3740,26 @@
   year={1985},
   publisher={Elsevier}
 }
+
+@article{franconeri2003,
+  title={Moving and looming stimuli capture attention},
+  author={Franconeri, Steven L and Simons, Daniel J},
+  journal={Perception \& psychophysics},
+  volume={65},
+  number={7},
+  pages={999--1010},
+  year={2003},
+  publisher={Springer}
+}
+
+@article{franconeri2003,
+  title={Moving and looming stimuli capture attention},
+  author={Franconeri, Steven L and Simons, Daniel J},
+  journal={Perception \& psychophysics},
+  volume={65},
+  number={7},
+  pages={999--1010},
+  year={2003},
+  publisher={Springer}
+}
+
