--- a/introduction.Rmd
+++ b/introduction.Rmd
@@ -2,6 +2,6 @@
 
 Humans are intensely visual creatures. About 20-30% of our brain is involved in visual processing [@van2003; @sheth2016], utilizing a highly sophisticated and powerful visual processing pipeline [see e.g. @goebel2004; @knudsen2020; for a brief review, see @ware2019]. It is well-established the brain can process certain salient visual stimuli in sub-20-millisecond times, outside of conscious attention [@ledoux2000; @ledoux2003], and that people can make accurate, parallel, and extremely rapid visual judgements, in phenomena known as subitizing and pre-attentive processing [@mandler1982; @treisman1985]. These features make the visual cortex the most powerful channel for receiving information that humans have, both in terms of bandwidth and throughput.
 
-Statisticians have long known about the power of visually presenting information [for a review, see @friendly2006 or Section \@ref(brief-history)]. 
+Statisticians have known about this power of visual presentation for a long time. Data visualization co-evolved alongside mathematical statistics, and, despite some ups and downs, has eventually earned a respected place in the applied statistician's toolkit [for a review, see @friendly2006 or Section \@ref(brief-history)].  
 
 The thesis is organized as follows. First, in Section \@ref(litreview), I reviews the history of interactive data visualization and discusses general trends and issues in the field. Second, in Section \@ref(problems), I discuss specific problems that one faces when designing an interactive data visualization pipeline. Third, in Section \@ref(goals), I outline the specific goals and aims I had while developing the interactive data visualization library. Fourth, Section \@ref(system) details the specific components and design considerations of the system. Sixth, in Section \@ref(example), I show an applied example of exploring a real-world data set, using my interactive data visualization library. Finally, in Section [TODO:DISCUSSION], I discuss lessons learned and potential future directions.
