Wrote some more, re-rendered interactive figures

--- a/introduction.Rmd
+++ b/introduction.Rmd
@@ -1,7 +1,21 @@
 # Introduction {#introduction}
 
-Humans are intensely visual creatures. About 20-30% of our brain is involved in visual processing [@van2003; @sheth2016], utilizing a highly sophisticated and powerful visual processing pipeline [see e.g. @goebel2004; @knudsen2020; for a brief review, see @ware2019]. It is well-established the brain can process certain salient visual stimuli in sub-20-millisecond times, outside of conscious attention [@ledoux2000; @ledoux2003], and that people can make accurate, parallel, and extremely rapid visual judgements, in phenomena known as subitizing and pre-attentive processing [@mandler1982; @treisman1985]. These features make the visual cortex the most powerful channel for receiving information that humans have, both in terms of bandwidth and throughput.
+> It’s written here: ‘In the Beginning was the Word!’ <br>
+> Here I stick already! Who can help me? It’s absurd, <br>
+> [...] <br>
+> The Spirit helps me! I have it now, intact. <br>
+> And firmly write: ‘In the Beginning was the Act!
+>
+> Faust, Part I, Johann Wolfgang von Goethe [-@goethe2015]
 
-Statisticians have known about this power of visual presentation for a long time. Data visualization co-evolved alongside mathematical statistics, and, despite some ups and downs, has eventually earned a respected place in the applied statistician's toolkit [for a review, see @friendly2006 or Section \@ref(brief-history)].  
+Humans are intensely visual creatures. About 20-30% of our brain is involved in visual processing [@van2003; @sheth2016], utilizing a highly sophisticated and powerful visual processing pipeline [see e.g. @goebel2004; @knudsen2020; for a brief review, see @ware2019]. It is well-established the brain can process certain salient visual stimuli in sub-20-millisecond times, outside of conscious attention [@ledoux2000; @ledoux2003], and that people can make accurate, parallel, and extremely rapid visual judgements, in phenomena known as subitizing and pre-attentive processing [@mandler1982; @treisman1985]. These features make the visual cortex the most powerful information channel that humans possess, both in terms of bandwidth and throughput.
 
-The thesis is organized as follows. First, in Section \@ref(litreview), I reviews the history of interactive data visualization and discusses general trends and issues in the field. Second, in Section \@ref(problems), I discuss specific problems that one faces when designing an interactive data visualization pipeline. Third, in Section \@ref(goals), I outline the specific goals and aims I had while developing the interactive data visualization library. Fourth, Section \@ref(system) details the specific components and design considerations of the system. Sixth, in Section \@ref(example), I show an applied example of exploring a real-world data set, using my interactive data visualization library. Finally, in Section [TODO:DISCUSSION], I discuss lessons learned and potential future directions.
+Statisticians have known about this power of visual presentation for a long time. Starting with early charts and maps, data visualization co-evolved alongside mathematical statistics, offering an alternative and complementary perspective [for a review, see @friendly2006 or Section \@ref(brief-history)]. While mathematical statistics tended to focus on confirmatory hypothesis testing, data visualization provided avenues for unsupervised exploration, "forcing us to notice that which we would never expect to see" [@tukey1977]. Eventually, this valuable role of forcing us to see the unexpected established data visualization as a respected tool within the applied statistician's toolkit.
+
+Seeing an object from a distance is one thing, but being able to also touch, manipulate, and probe it is another. Within the human brain, action and perception are not independent, but are instead intricately linked, mutually reinforcing processes [see e.g. @dijkerman2007; @lederman2009]. Beginning in the 1970's, statisticians acquired a new set of tools for exploiting this connection. The advent of computer graphics and interactive data visualization transformed the idea of "interrogating a chart" from a mere turn of phrase into tangible reality. All of a sudden, it became possible to work with the visual representation of data in a tactile way, getting new perspectives and insights at the stroke of a key or click of a button. 
+
+The alluring union of the tactile and the visual lead to interactive data visualization becoming a widely popular method of presenting data. Nowadays, there exists is a dearth of libraries and packages in all the major data analytic programming languages providing tools for building interactive data visualizations. Yet, despite its popularity, interactive data visualization is rarely used by individuals for data exploration. 
+
+#### Thesis Overview
+
+The thesis is organized as follows. First, in Section \@ref(litreview), I reviews the history of interactive data visualization and discusses general trends and issues in the field. Second, in Section \@ref(problems), I discuss specific problems that one faces when designing an interactive data visualization pipeline. Third, in Section \@ref(goals), I outline the specific goals and aims I had while developing the interactive data visualization library. Fourth, Section \@ref(system) details the specific components and design considerations of the system. Sixth, in Section \@ref(applied-example), I show an applied example of exploring a real-world data set, using my interactive data visualization library. Finally, in Section [TODO:DISCUSSION], I discuss lessons learned and potential future directions.
