--- a/references.bib
+++ b/references.bib
@@ -3700,7 +3700,7 @@
 
 @article{ledoux2003,
   title={The emotional brain, fear, and the amygdala},
-  author={LeDoux, Joseph},
+  author={LeDoux, Joseph E},
   journal={Cellular and molecular neurobiology},
   volume={23},
   pages={727--738},
@@ -3763,3 +3763,33 @@
   publisher={Springer}
 }
 
+@book{goethe2015,
+  title={Faust},
+  origdate={1808},
+  author={Goethe, Johann Wolfgang},
+  translator = {Kline, Anthony S},
+  year={2015},
+  publisher={CreateSpace Independent Publishing Platform},
+}
+
+@article{dijkerman2007,
+  title={Somatosensory processing subserving perception and action: Dissociations, interactions, and integration},
+  author={Dijkerman, H Chris and De Haan, Edward HF},
+  journal={Behavioral and brain sciences},
+  volume={30},
+  number={2},
+  pages={224--230},
+  year={2007},
+  publisher={Cambridge University Press}
+}
+
+@article{lederman2009,
+  title={Haptic perception: A tutorial},
+  author={Lederman, Susan J and Klatzky, Roberta L},
+  journal={Attention, Perception, \& Psychophysics},
+  volume={71},
+  number={7},
+  pages={1439--1459},
+  year={2009},
+  publisher={Springer}
+}
