--- a/example.Rmd
+++ b/example.Rmd
@@ -6,7 +6,7 @@ editor_options:
 
 ```{r}
 #| echo: false
-knitr::opts_chunk$set(eval = FALSE)
+# knitr::opts_chunk$set(eval = FALSE)
 ```
 
 # Applied example
@@ -398,12 +398,10 @@ One final things we are going to investigate are characteristics of patient coho
 df |>
   create_schema() |>
   add_barplot(c("diagnosis", "cases")) |>
-  add_barplot(c("year", "cases")) |>
   add_barplot(c("year", "cases"), list(reducer = "max")) |>
-  add_barplot(c("year", "days")) |>
   add_barplot(c("year", "days"), list(reducer = "max")) |>
   set_scale("barplot1", "x", breaks = order_df$diagnosis) |>
-  set_layout(matrix(c(1, 1, 2, 3, 4, 5), nrow = 2)) |>
+  set_layout(matrix(c(1, 1, 2, 3), nrow = 2)) |>
   render()
 ```
 
